--- a/src/main/gui/main.css
+++ b/src/main/gui/main.css
@@ -15,7 +15,7 @@
 }
 .button{
     -fx-background-color: rgba(0,0,0,0);
-    -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.5), 5, 0.25git a, 0.0, 0.0);
+    -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.5), 5, 0.25, 0.0, 0.0);
     -fx-border-color: white;
     -fx-text-fill:white;
 }
