Made the file work when running from console. Working directory in Intellij should be the 'main' folder now#

--- a/src/main/gui/main.css
+++ b/src/main/gui/main.css
@@ -1,10 +1,10 @@
 
 @font-face {
-    src: url("file:font/HandwritingRegular-owLLA.otf");
+    src: url("file:../../font/HandwritingRegular-owLLA.otf");
 }
 
 #background{
-    -fx-background-image: url("file:images/oak-background.jpg");
+    -fx-background-image: url("file:../../images/oak-background.jpg");
 }
 
 .text{
